--- a/index.html
+++ b/index.html
@@ -5,13 +5,219 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Panda Comerce</title>
-    <!--bootstrap style sheet-->
+    <!------------------------bootstrap style sheet------------------->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 </head>
-
 <body>
- <h2>Panda vai khaay and </h2>  
- 
- <!--bootstrap script-->
+    <!-----------------------------header start---------------------->
+    <header>
+        <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
+            <div class="container">
+              <a class="navbar-brand" href="#"></a>
+              <img src="images/logo.png" alt="" >
+              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+              </button>
+              <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                  <li class="nav-item">
+                    <a class="nav-link active" aria-current="page" href="#">Home</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="#shoes">Shoes</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="#backpack">Backpack</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="#subscribe">Subscribe</a>
+                  </li>
+                </ul>
+              </div>
+            </div>
+          </nav>
+          <!-------------------------------image slider--------------->
+         <div class="container">
+            <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
+                <div class="carousel-inner rounded-3">
+                  <div class="carousel-item active">
+                            <div class="row bg-info bg-gradient p-5 d-flex align-items-center">
+                                <div class="col-lg-7">
+                                    <h1>Headphone collection By Rahat</h1>
+                                    <p>This is the best headphone in the world for people who just want to waste time in front of funky world</p>
+                                    <h1>$420</h1>
+                                    <button class="btn btn-warning">Buy Now</button>
+                                </div>
+                                <div class="col-lg-5">
+                                    <img src="images/banner-images/headphone.png" class="d-block w-100" alt="...">
+                                </div>
+                            </div>
+                       </div>
+                  <div class="carousel-item">
+                    <div class="row bg-info bg-gradient p-5 d-flex align-items-center">
+                        <div class="col-lg-7">
+                            <h1>TV ollection By Rahat</h1>
+                            <p>This is the best TV in the world for people who just want to waste time in front of funky world</p>
+                            <h1>$420</h1>
+                            <button class="btn btn-warning">Buy Now</button>
+                        </div>
+                        <div class="col-lg-5">
+                            <img src="images/banner-images/tv.png" class="d-block w-100" alt="...">
+                        </div>
+                      </div>
+                  </div>
+                  <div class="carousel-item">
+                    <div class="row bg-info bg-gradient p-5 d-flex align-items-center">
+                        <div class="col-lg-7">
+                            <h1>X-box collection By Rahat</h1>
+                            <h1></h1>
+                            <p>This is the best xbox in the world for people who just want to waste time in front of funky world</p>
+                            <h1>$420</h1>
+                            <button class="btn btn-warning">Buy Now</button>
+                        </div>
+                        <div class="col-lg-5">
+                            <img src="images/banner-images/xbox.png" class="d-block w-100" alt="...">
+                        </div>
+                      </div>
+                  </div>
+                </div>
+                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
+                  <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                  <span class="visually-hidden">Previous</span>
+                </button>
+                <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="next">
+                  <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                  <span class="visually-hidden">Next</span>
+                </button>
+              </div>
+            
+         </div>
+    </header>
+    <main>
+        <!--catagories-->
+        <section class="container my-5">
+            <div class="row g-4">
+              <div class="col-lg-4 col-md-6 col-12">
+                <div class="p-3 border bg-warning d-flex align-items-center d-flex justify-content-between rounded 3">
+                    <h1 class="text-white">Watch</h1>
+                    <img src="images/categories/watch.png" alt="">
+                </div>
+              </div>
+              <div class="col-lg-4 col-md-6 col-12">
+                <div class="p-3 border bg-success d-flex align-items-center d-flex justify-content-between rounded 3">
+                    <h1 class="text-white">Bag</h1>
+                    <img src="images/categories/bag.png" alt="">
+                </div>
+              </div>
+              <div class="col-lg-4 col-md-6 col-12">
+              <div class="p-3 border bg-primary d-flex align-items-center d-flex justify-content-between rounded 3">
+                <h1 class="text-white">Shoes</h1>
+                <img src="images/categories/shoes.png" alt="">
+            </div>
+            </div>
+            </div>
+        </section>
+        <!---------------------------cards---------Shoes------------->
+        <section class="container" id="shoes">
+          <h2>Shoes</h2>
+            <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-4">
+                <div class="col">
+                  <div class="card border-0 shadow-lg h-100">
+                    <img src="images/shoes/shoe-1.png" class="card-img-top" alt="...">
+                    <div class="card-body">
+                      <h5 class="card-title">Supply 350</h5>
+                      <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                    </div>
+                    <div class="m-3">
+                      <button class="btn btn-warning">Buy now</button>
+                    </div>
+                  </div>
+                </div>
+                <div class="col">
+                  <div class="card border-0 shadow-lg h-100">
+                    <img src="images/shoes/shoe-2.png" class="card-img-top" alt="...">
+                    <div class="card-body">
+                      <h5 class="card-title">Nike</h5>
+                      <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
+                    </div>
+                    <div class="m-3">
+                      <button class="btn btn-warning">Buy now</button>
+                    </div>
+                  </div>
+                </div>
+                <div class="col">
+                  <div class="card border-0 shadow-lg h-100">
+                    <img src="images/shoes/shoe-3.png" class="card-img-top" alt="...">
+                    <div class="card-body">
+                      <h5 class="card-title">Red Airmax</h5>
+                      <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
+                    </div>
+                    <div class="m-3">
+                      <button class="btn btn-warning">Buy now</button>
+                    </div>
+                  </div>
+                </div>
+              </div>
+        </section>
+        <!------------------------------Bags---------------------------->
+        <section class="container my-5" id="backpack">
+          <h2>Backpacks</h2>
+            <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-4">
+                <div class="col">
+                  <div class="card border-0 shadow-lg h-100">
+                    <img src="images/bags/bag-1.png" class="card-img-top" alt="...">
+                    <div class="card-body">
+                      <h5 class="card-title">Tanjim Red</h5>
+                      <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                    </div>
+                    <div class="m-3">
+                      <button class="btn btn-warning">Buy now</button>
+                    </div>
+                  </div>
+                </div>
+                <div class="col">
+                  <div class="card border-0 shadow-lg h-100">
+                    <img src="images/bags/bag-2.png" class="card-img-top" alt="...">
+                    <div class="card-body">
+                      <h5 class="card-title">Tanjim-Airbag</h5>
+                      <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
+                    </div>
+                    <div class="m-3">
+                      <button class="btn btn-warning">Buy now</button>
+                    </div>
+                  </div>
+                </div>
+                <div class="col">
+                  <div class="card border-0 shadow-lg h-100 ">
+                    <img src="images/bags/bag-3.png" class="card-img-top" alt="...">
+                    <div class="card-body">
+                      <h5 class="card-title">Tanjim Airmax</h5>
+                      <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
+                    </div>
+                    <div class="m-3">
+                      <button class="btn btn-warning">Buy now</button>
+                    </div>
+                  </div>
+                </div>
+              </div>
+        </section>
+        <!---------------------------subscribe-------------------------->
+        <section style="height: 300px;" class="container d-flex justify-content-center bg-info align-items-center rounded-3" id="subscribe">
+         <div>
+          <h1>LET'S STAY IN TOUCH</h1>
+          <p>Get updates on sales, specials and more
+          </p>
+          <input type="text" name="" placeholder="Your Email">
+          <br>
+          <button class="btn btn-warning">Submit</button>
+         </div>
+        </section>
+    </main>
+    <footer class="mt-5 text-center">
+     <p class="small">©2020. Panda Commerce. All rights reserved. Sofia, Bulgaria.</p>
+    </footer>
+
+    <!--bootstrap script-->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 </body>
 </html>
