--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <title>Panda Comerce</title>
     <!------------------------bootstrap style sheet------------------->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <!--custom styles-->
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
     <!-----------------------------header start---------------------->
@@ -36,17 +38,17 @@
               </div>
             </div>
           </nav>
-          <!-------------------------------image slider--------------->
-         <div class="container">
+          <!-------------------------------image slider---carousel------------>
+         <div class="container my-5 py-5">
             <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
                 <div class="carousel-inner rounded-3">
                   <div class="carousel-item active">
-                            <div class="row bg-info bg-gradient p-5 d-flex align-items-center">
+                            <div class="row panda-bg-info bg-gradient p-5 mt-3 d-flex align-items-center">
                                 <div class="col-lg-7">
                                     <h1>Headphone collection By Rahat</h1>
                                     <p>This is the best headphone in the world for people who just want to waste time in front of funky world</p>
                                     <h1>$420</h1>
-                                    <button class="btn btn-warning">Buy Now</button>
+                                    <button class="panda-btn-buy-now">Buy Now</button>
                                 </div>
                                 <div class="col-lg-5">
                                     <img src="images/banner-images/headphone.png" class="d-block w-100" alt="...">
@@ -54,12 +56,12 @@
                             </div>
                        </div>
                   <div class="carousel-item">
-                    <div class="row bg-info bg-gradient p-5 d-flex align-items-center">
+                    <div class="row panda-bg-info bg-gradient p-5 d-flex align-items-center">
                         <div class="col-lg-7">
                             <h1>TV ollection By Rahat</h1>
                             <p>This is the best TV in the world for people who just want to waste time in front of funky world</p>
                             <h1>$420</h1>
-                            <button class="btn btn-warning">Buy Now</button>
+                            <button class="panda-btn-buy-now">Buy Now</button>
                         </div>
                         <div class="col-lg-5">
                             <img src="images/banner-images/tv.png" class="d-block w-100" alt="...">
@@ -67,13 +69,13 @@
                       </div>
                   </div>
                   <div class="carousel-item">
-                    <div class="row bg-info bg-gradient p-5 d-flex align-items-center">
+                    <div class="row panda-bg-info bg-gradient p-5 d-flex align-items-center">
                         <div class="col-lg-7">
                             <h1>X-box collection By Rahat</h1>
                             <h1></h1>
                             <p>This is the best xbox in the world for people who just want to waste time in front of funky world</p>
                             <h1>$420</h1>
-                            <button class="btn btn-warning">Buy Now</button>
+                            <button class="panda-btn-buy-now">Buy Now</button>
                         </div>
                         <div class="col-lg-5">
                             <img src="images/banner-images/xbox.png" class="d-block w-100" alt="...">
@@ -95,7 +97,7 @@
     </header>
     <main>
         <!--catagories-->
-        <section class="container my-5">
+        <section class="container my-5 catagories">
             <div class="row g-4">
               <div class="col-lg-4 col-md-6 col-12">
                 <div class="p-3 border bg-warning d-flex align-items-center d-flex justify-content-between rounded 3">
@@ -129,7 +131,7 @@
                       <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
                     </div>
                     <div class="m-3">
-                      <button class="btn btn-warning">Buy now</button>
+                      <button class="panda-btn-buy-now">Buy now</button>
                     </div>
                   </div>
                 </div>
@@ -141,7 +143,7 @@
                       <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
                     </div>
                     <div class="m-3">
-                      <button class="btn btn-warning">Buy now</button>
+                      <button class="panda-btn-buy-now">Buy now</button>
                     </div>
                   </div>
                 </div>
@@ -153,7 +155,7 @@
                       <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
                     </div>
                     <div class="m-3">
-                      <button class="btn btn-warning">Buy now</button>
+                      <button class="panda-btn-buy-now">Buy now</button>
                     </div>
                   </div>
                 </div>
@@ -171,7 +173,7 @@
                       <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
                     </div>
                     <div class="m-3">
-                      <button class="btn btn-warning">Buy now</button>
+                      <button class="panda-btn-buy-now">Buy now</button>
                     </div>
                   </div>
                 </div>
@@ -183,7 +185,7 @@
                       <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
                     </div>
                     <div class="m-3">
-                      <button class="btn btn-warning">Buy now</button>
+                      <button class="panda-btn-buy-now">Buy now</button>
                     </div>
                   </div>
                 </div>
@@ -195,26 +197,26 @@
                       <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
                     </div>
                     <div class="m-3">
-                      <button class="btn btn-warning">Buy now</button>
+                      <button class="panda-btn-buy-now">Buy now</button>
                     </div>
                   </div>
                 </div>
               </div>
         </section>
         <!---------------------------subscribe-------------------------->
-        <section style="height: 300px;" class="container d-flex justify-content-center bg-info align-items-center rounded-3" id="subscribe">
+        <section style="height: 300px;" class="container d-flex justify-content-center panda-bg-info align-items-center rounded-3" id="subscribe">
          <div>
           <h1>LET'S STAY IN TOUCH</h1>
           <p>Get updates on sales, specials and more
           </p>
-          <input type="text" name="" placeholder="Your Email">
+          <input class="form-control" type="text" name="" placeholder="Your Email">
           <br>
-          <button class="btn btn-warning">Submit</button>
+          <button class="panda-btn-buy-now">Submit</button>
          </div>
         </section>
     </main>
     <footer class="mt-5 text-center">
-     <p class="small">©2020. Panda Commerce. All rights reserved. Sofia, Bulgaria.</p>
+     <p class="small">©2021. Panda Commerce. All rights reserved. Sofia, Bulgaria.</p>
     </footer>
 
     <!--bootstrap script-->
