added the title

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                   <div class="carousel-item">
                     <div class="row panda-bg-info bg-gradient p-5 d-flex align-items-center">
                         <div class="col-lg-7">
-                            <h1>TV ollection By Rahat</h1>
+                            <h1>TV Collection By Rahat</h1>
                             <p>This is the best TV in the world for people who just want to waste time in front of funky world</p>
                             <h1>$420</h1>
                             <button class="panda-btn-buy-now">Buy Now</button>
